@@ -1,47 +1,54 @@
 package com.example.githubapi.service;
 
 import com.example.githubapi.configuration.ConfigProperties;
+import com.example.githubapi.exceptionHandler.UserNotFoundException;
 import com.example.githubapi.model.Branch;
 import com.example.githubapi.model.BranchInfo;
 import com.example.githubapi.model.GithubResponse;
 import com.example.githubapi.model.RepositoryInfo;
-import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.web.client.RestClient;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@RequiredArgsConstructor
+
 @Service
 public class GithubServiceImpl implements GithubService {
-    private final ConfigProperties prop;
-    private final RestTemplate restTemplate;
+    private final RestClient restClient;
+
+    public GithubServiceImpl(RestClient.Builder builder, ConfigProperties prop) {
+        this.restClient = builder
+                .baseUrl(prop.getGithubBaseUrl())
+                .defaultHeader("Authorization", "Bearer " + prop.getGithubApiToken())
+                .build();
+    }
 
     @Override
     public List<RepositoryInfo> getUserRepositories(String username) {
-        String apiUrl = String.format("%s/users/%s/repos", prop.getGithubBaseUrl(), username);
-        // Not handling the NotFound exception here because it's handled globally through RestControllerAdvice
-        GithubResponse[] response = restTemplate.getForObject(apiUrl, GithubResponse[].class);
-        return Arrays.stream(response)
-                .filter(r -> !r.isFork())
-                .map((r) -> RepositoryInfo.builder()
-                        .repositoryName(r.getName())
-                        .ownerLogin(r.getOwner().getLogin())
-                        .branches(getBranches(username, r.getName()))
-                        .build())
-                .collect(Collectors.toList());
+        var uri = String.format("/users/%s/repos", username);
+        GithubResponse[] githubResponses = restClient.get()
+                .uri(uri)
+                .retrieve()
+                .onStatus(HttpStatusCode::is4xxClientError, (request, response) -> {
+                    throw new UserNotFoundException(response.getStatusText());
+                })
+                .body(GithubResponse[].class);
+        return Arrays.stream(githubResponses)
+                .filter(GithubResponse::isNotFork)
+                .map(r -> new RepositoryInfo(r.name(), r.owner(), getBranches(username, r.name())))
+                .toList();
     }
 
     private List<BranchInfo> getBranches(String username, String repoName) {
-        String branchUrl = String.format("%s/repos/%s/%s/branches", prop.getGithubBaseUrl(), username, repoName);
-        Branch[] response = restTemplate.getForObject(branchUrl, Branch[].class);
-        return Arrays.stream(response)
-                .map((b) -> BranchInfo.builder()
-                        .name(b.getName())
-                        .lastCommitSha(b.getCommit().getSha())
-                        .build())
-                .collect(Collectors.toList());
+        var uri = String.format("/repos/%s/%s/branches", username, repoName);
+        Branch[] branches = restClient.get()
+                .uri(uri)
+                .retrieve()
+                .body(Branch[].class);
+        return Arrays.stream(branches)
+                .map(b -> new BranchInfo(b.name(), b.commit().sha()))
+                .toList();
     }
 }
